<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        style="@style/styleA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/best_search_result"
        android:textColor="@color/color_black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rl_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_nodata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_nodata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_result"
            android:textColor="@color/color_black"
            android:textSize="24sp"
            android:layout_marginTop="48dp"
            style="@style/styleB"></TextView>

        <Button
            android:id="@+id/btn_connect_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_author"
            android:layout_below="@id/tv_nodata"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_green"
            android:textColor="@color/color_white"
            android:textSize="16sp"
            android:textStyle="bold"
            />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>